# seedbox-service/openapi.yaml
@@ -2395,13 +2395,20 @@ paths:
           ```
           `category` is the category you want to create.
         content:
-          application/x-www-form-urlencoded:
-            schema:
-              allOf:
-                - $ref: '#/components/schemas/Category'
-            example:
-              category: CategoryName
-              savePath: /path/to/dir
+        application/x-www-form-urlencoded:
+          schema:
+            type: object
+            properties:
+              category:
+                type: string
+              savePath:
+                type: string 
+            required:
+              - category
+              - savePath
+          example:
+            category: CategoryName
+            savePath: /path/to/dir
         required: true
       responses:
         '200':
